Bug 136319 - CRASH: Changing colour of shape (gtk3 only)
Summary: CRASH: Changing colour of shape (gtk3 only)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0
Keywords: bibisected, bisected, haveBacktrace, regression
: 136353 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-08-31 09:09 UTC by Xisco Faulí
Modified: 2020-09-02 05:36 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (3.68 KB, text/plain)
2020-08-31 11:19 UTC, Julien Nabet
Details
Valgrind trace (171.16 KB, text/x-log)
2020-08-31 12:26 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-08-31 09:09:16 UTC
Steps to reproduce:
1. Open Attachment 164368 [details]
2. Select any select and change its colour from the toolbar.

-> Crash

Reproduced in
Version: 7.1.0.0.alpha0+
Build ID: e2f4e65a7b8024c00b049eebf0d87637efda7f24
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2020-08-31 09:11:39 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=707903aa8c74047c4fe6364b114b0736f61a4b4d

author	Ahmed ElShreif <aelshreif7@gmail.com>	2020-08-24 11:39:37 +0200
committer	Ahmed ElShreif <aelshreif7@gmail.com>	2020-08-27 20:29:22 +0200
commit 707903aa8c74047c4fe6364b114b0736f61a4b4d (patch)
tree d75f8fcb69bc2c95409d602c0c36033cc695812a
parent 98b47440d2f95504f6bca82d2081343bdc183cde (diff)
uilogger : Add support in the Logger and DSL for ValueSet

Bisected with: bibisect-linux64-7.1
Comment 2 Julien Nabet 2020-08-31 11:19:17 UTC
Created attachment 164916 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 3 Julien Nabet 2020-08-31 12:26:12 UTC
Created attachment 164918 [details]
Valgrind trace
Comment 4 Julien Nabet 2020-09-01 09:07:18 UTC
*** Bug 136353 has been marked as a duplicate of this bug. ***
Comment 5 Julien Nabet 2020-09-01 09:09:06 UTC
Xisco: sorry, testing tdf#136353, I had a crash only with gtk3 (with same bt). So I retested this one with kf5 rendering and didn't reproduce this.

Caolán: thought you might be interested in this one since it's specific to gtk3.
Comment 6 Caolán McNamara 2020-09-01 09:44:47 UTC
the widget is destroyed in the Select so accesses deleted stuff after that call in collectUIInformation
Comment 7 Commit Notification 2020-09-01 20:14:22 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6a9e01ed889e92772e32ad5255fc60bd6dd7ee2a

tdf#136319 do logging before calling handler which might destroy the valueset

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Julien Nabet 2020-09-02 05:36:37 UTC
On pc Debian x86-64 with master sources updated today, I don't reproduce this anymore.
Thank you Caolán!