tdf#136319 do logging before calling handler which might destroy the valueset

though doing this logging always when ~100% of the time there is noone
listening seems wasteful

Change-Id: Ib18462b70136ac52a4b9340a3a0890b4f97a4593